Began deprecation of event.keyCode ==> event.key, also created NO_LINK constant in ConfigurationAPI. Also beginnings of State Machine log prompt to user at Configure and Start.

--- a/WebGUI/js/Debug.js.in
+++ b/WebGUI/js/Debug.js.in
@@ -435,7 +435,7 @@ else	//IF DEBUG MODE IS OFF!
 
 // living and breathing examples:
 Debug.log("Debug mode is on at level: " + Debug.level);
-Debug.log("This is an example for posterity that is not printed due to debug priority.",Debug.level+1);
+Debug.log("This is an example for posterity that is not printed due to debug priority.", {"DEBUG_PRIORITY": Debug.level + 1 });
 
 
 
