Add sanitizer configs from artdaq

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,35 @@ cet_set_compiler_flags(
  EXTRA_FLAGS -pedantic -D_LIBCPP_ENABLE_CXX17_REMOVED_FEATURES=1
  )
  
-string(TOUPPER ${CMAKE_BUILD_TYPE} BTYPE_UC )
-set(DEBUG_MODE 0)
-if( ${BTYPE_UC} MATCHES "DEBUG" )
-  set(DEBUG_MODE 1)
+# Debug streamer.
+string(TOUPPER ${CMAKE_BUILD_TYPE} BTYPE_UC)
+if(BTYPE_UC STREQUAL DEBUG)
+  add_definitions(-DDEBUGME)
+	if(DEFINED ENV{USE_ASAN})
+		if($ENV{USE_ASAN} GREATER 0)
+			message("!!! Address Sanitizer Activated!!!")
+			add_compile_options(-fsanitize=address -Wno-unused-command-line-argument)
+			add_link_options(-lasan)
+		endif()
+	endif()
+	if(DEFINED ENV{USE_TSAN})
+		if($ENV{USE_TSAN} GREATER 0)
+			message("!!! Thread Sanitizer Activated!!!")
+			add_compile_options(-fsanitize=thread -Wno-unused-command-line-argument)
+			add_link_options(-ltsan)
+		endif()
+	endif()
+	if(DEFINED ENV{USE_UBSAN})
+		if($ENV{USE_UBSAN} GREATER 0)
+			message("!!! Undefined Sanitizer Activated!!!")
+			add_compile_options(-fsanitize=undefined -Wno-unused-command-line-argument)
+			add_link_options(-lubsan)
+		endif()
+	endif()
+	if(DEFINED ENV{USE_GCOV})
+		add_compile_options(-fprofile-arcs -ftest-coverage --coverage)
+		add_link_options(--coverage)
+	endif()
 endif()
 
 cet_remove_compiler_flags(-std=c++98)
