Checking local state

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -8,6 +8,7 @@ cet_script(ALWAYS_COPY
 	ots_create_repo_from_demo.sh
 	ots_get_and_fix_repo.sh
 	ots_add_qualifiers_to_repo_product_deps.sh
+	displayVersionsAndQualifiers.sh
 )
 
 install_headers()
