--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,8 @@ link_directories($ENV{ARTDAQ_DATABASE_LIB})
 #add_definitions(-DMESSAGEFACILITY_HEX_VERSION=0x${MESSAGEFACILITY_MAJOR_VERSION}${MESSAGEFACILITY_MINOR_VERSION}${MESSAGEFACILITY_PATCH_VERSION})
 
 # For version.h
-#string(REGEX MATCHALL "[0-9][0-9]?" OTSDAQ_VERSION_LIST "${PROJECT_VERSION}")
+message("otsdaq_utilities PROJECT_VERSION ${PROJECT_VERSION}")
+string(REGEX MATCHALL "[0-9][0-9]?" OTSDAQ_VERSION_LIST "${PROJECT_VERSION}")
 list(GET OTSDAQ_VERSION_LIST 0 OTSDAQ_MAJOR_VERSION)
 list(GET OTSDAQ_VERSION_LIST 1 OTSDAQ_MINOR_VERSION)
 list(GET OTSDAQ_VERSION_LIST 2 OTSDAQ_PATCH_VERSION)
