--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ if(BTYPE_UC STREQUAL DEBUG)
 	endif()
 	if(DEFINED ENV{USE_UBSAN})
 		if($ENV{USE_UBSAN} GREATER 0)
-			message("!!! Undefined Sanitizer Activated!!!")
+			message("!!! Undefined Behavior Sanitizer Activated!!!")
 			add_compile_options(-fsanitize=undefined -Wno-unused-command-line-argument)
 			add_link_options(-lubsan)
 		endif()
