Ensure that DEBUG_MODE is set.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,14 @@ if( $ENV{OTS_DOXY} MATCHES "DOIT" )
 	add_subdirectory(onlineDoc)
 endif()
 
+if( NOT DEBUG_MODE )
+	if(DEFINED $ENV{DEBUG_MODE})
+		set(DEBUG_MODE $ENV{DEBUG_MODE})
+	else()
+		set(DEBUG_MODE 0)
+	endif()
+endif()
+
 # WebGUI
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js @ONLY)
 FILE(COPY WebGUI DESTINATION . PATTERN "*.in" EXCLUDE)
