--- a/WebGUI/js/Debug.js.in
+++ b/WebGUI/js/Debug.js.in
@@ -456,17 +456,21 @@ Debug._ERR_TRUNCATION_LENGTH = 10000;
 //=====================================================================================
 //Note: effectively doing this: str.replace(/\n/g , "<br>").replace(/\t/g,"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
 //	...but str.replace() was really slowing down everything on big strings
-Debug.errorPopConditionString = function(str) {
+Debug.errorPopConditionString = function(str, truncLenIn) {
 	var rstr = "";
+
+	var truncLen = Debug._ERR_TRUNCATION_LENGTH;
+	if(truncLenIn !== undefined)
+		truncLen = truncLenIn;
 	
-	for(var i=0;i<str.length && i<Debug._ERR_TRUNCATION_LENGTH; ++i)
+	for(var i=0;i<str.length && i<truncLen; ++i)
 		if(str[i] == '\n')
 			rstr += "<br>";
 		else if(str[i] == '\t')
 			rstr += "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
 		else
 			rstr += str[i];
-	if(str.length > Debug._ERR_TRUNCATION_LENGTH)
+	if(str.length > truncLen)
 		rstr += "<br>...&lt;&lt;&lt; MESSAGE TRUNCATED &gt;&gt;&gt;";
 	
 	return rstr; 
