Better error handling and some bug fixes

--- a/WebGUI/js/Debug.js.in
+++ b/WebGUI/js/Debug.js.in
@@ -342,29 +342,24 @@ if (Debug.mode) //IF DEBUG MODE IS ON!
 			//	returns undefined if no change
 			function localCallOutDebugLocales(str)
 			{
-				var i = 0;
+				var i = 4;
 				var j,k,l;
 				var returnStr;
+				var fileStr;
 				try
 				{
-					while((j = str.indexOf('[',i)) > 0 && (k = str.indexOf(']',i)) > 0)
+					while((k = str.indexOf(' |',i)) > 0 && (j = str.lastIndexOf(':',k-3)) > 0)
 					{
-						if(j < 4)
-						{
-							i = k+1;
-							continue; //skip, too soon to be valid
-						}
-
 						//found new possible call out 
 						//console.log(str.substr(j,k-j+1));
 
 						if(!returnStr) //check if need to define for the first time
 							returnStr = "";
 
-						//look for icc, .cc and .h 
-						if((str[j-3] == '.' && str[j-2] == 'h') || 
-								((str[j-4] == '.' || str[j-4] == 'i') &&
-										str[j-3] == 'c' && str[j-2] == 'c'))
+						//look for icc, .cc, .cpp, .hh, and .h 
+						if((str[j-2] == '.' && str[j-1] == 'h') || 
+							(str[j-3] == '.' && (str[j-2] == 'h' || str[j-2] == 'c')) || 
+							(str[j-4] == '.' && (str[j-3] == 'c' || str[j-2] == 'i') && (str[j-2] == 'p' || str[j-2] == 'c')))
 						{
 							//find beginning of blob (first non-file/c++ character)
 							for(l = j-3; l >= i; --l)
@@ -384,17 +379,33 @@ if (Debug.mode) //IF DEBUG MODE IS ON!
 							//previous chunk								
 							returnStr += str.substr(i,l-i);
 
+							fileStr = str.substr(l,k-l);
+
 							//add label
-							returnStr += "<br><label class='" + 
-									Debug._errBoxId + "-localCallOut'>";								
+							returnStr += "<br>";
 
-							//add callout
-							returnStr += str.substr(l,k+1-l);
-
+							returnStr += //if filename, add link to CodeEditor
+								DesktopContent.htmlOpen("a", //start macro module table
+									{
+										"title":"Open file in a new browser tab: \n" +
+										fileStr,
+										"onclick":"DesktopContent.openNewBrowserTab(" +
+										"\"Code Editor\",undefined /*subname undefined for LID lookup*/," + 
+										"\"?" +
+										"startFilePrimary=" +
+										fileStr + "\",undefined /*unique undefined for LID lookup*/);' ", //end onclick
+									},
+									"<label class='" + 
+									Debug._errBoxId + "-localCallOut' style='cursor:pointer'>" + 
+									fileStr /*innerHTML*/ +
+									"</label>",
+									true /*doCloseTag*/);	
+							
 							//add end label
-							returnStr += "</label><br>";
+							returnStr += "<br>";
 
 							//skip any tabs and new lines (so that the next content is right below line #)
+							++k; //skip |
 							while(k+1 < str.length && 
 									(str[k+1] == '\n' || str[k+1] == '\t')) ++k;								
 
