--- a/WebGUI/js/Debug.js.in
+++ b/WebGUI/js/Debug.js.in
@@ -467,6 +467,7 @@ Debug._ERR_TRUNCATION_LENGTH = 10000;
 //=====================================================================================
 //Note: effectively doing this: str.replace(/\n/g , "<br>").replace(/\t/g,"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
 //	...but str.replace() was really slowing down everything on big strings
+//	Use truncLenIn = -1 to avoid message truncation
 Debug.errorPopConditionString = function(str, truncLenIn) {
 	var rstr = "";
 
@@ -496,6 +497,7 @@ Debug.errorPopConditionString = function(str, truncLenIn) {
 //=====================================================================================
 //Show the error string err in the error popup on the window
 // create error div if not yet created
+Debug._errTruncLen = undefined; //temporarily change to -1 to avoid truncation
 Debug.errorPop = function(err,severity) 
 {
 			
@@ -771,7 +773,7 @@ Debug.errorPop = function(err,severity)
 			"<label style='color:white;font-size:16px;'>" + 
 			d.toLocaleDateString() +
 			" " + tstr + " (Tip) :</label><br>" +
-			Debug.errorPopConditionString(err);	
+			Debug.errorPopConditionString(err,-1 /* avoid truncation */);	
 	else //normally put newest at top since likely highest priority
 		str = "<label style='color:white;font-size:16px;'>" + 
 		    d.toLocaleDateString() +
@@ -779,7 +781,7 @@ Debug.errorPop = function(err,severity)
 		    (severity == Debug.INFO_PRIORITY.DEBUG_PRIORITY ? '(Info)':'')+
 		    (severity == Debug.WARN_PRIORITY.DEBUG_PRIORITY ? '(Warning)':'') +
 		    ":</label><br>" +
-		    Debug.errorPopConditionString(err) + 
+		    Debug.errorPopConditionString(err,Debug._errTruncLen) + 
 		    (wasAlreadyContent?"<br>...<br>":"") +
 		    str;
 
