--- a/WebGUI/js/Debug.js.in
+++ b/WebGUI/js/Debug.js.in
@@ -342,23 +342,71 @@ if (Debug.mode) //IF DEBUG MODE IS ON!
 			//	returns undefined if no change
 			function localCallOutDebugLocales(str)
 			{
-				var i = 4;
+				var i = 0;
 				var j,k,l;
 				var returnStr;
 				var fileStr;
+				var labelStr;
 				try
 				{
-					while((k = str.indexOf(' |',i)) > 0 && (j = str.lastIndexOf(':',k-3)) > 0)
+					while((k = str.indexOf(" |",i)) > 0) 
 					{
-						//found new possible call out 
-						//console.log(str.substr(j,k-j+1));
-
 						if(!returnStr) //check if need to define for the first time
 							returnStr = "";
 
+						//check if : is in a place that make sense (i.e., ":LINE |")
+						if((j = str.lastIndexOf(':',k-2)) <= i) //use k-2 to avoid selecting "err: |" scenarios
+						{
+							//not a callout, so skip ahead
+							//previous chunk			
+							returnStr += str.substr(i,k-i);
+							i = k+1;
+							continue;
+						}
+
+						//found new possible call out 
+						//console.log(str.substr(j,k-j+1));
+
+
+						//first, check for inline <FILE>filename</FILE> callouts
+						var f;
+						var ff;
+						while(	(f  = str.indexOf("<FILE>" ,i)   ) > 0 && 
+								f < j &&
+								(ff = str.indexOf("</FILE>",f + 10) ) > 0 &&
+								ff < j) //found a FILE callout
+						{
+							//console.log("Found file call out at",f);//str.substr(f,ff-f));
+							
+							//previous chunk								
+							returnStr += str.substr(i,f-i);
+
+							fileStr = str.substr(f + ("<FILE>").length,
+								ff - f - ("<FILE>").length);
+
+							returnStr += //if filename, add link to CodeEditor
+								DesktopContent.htmlOpen("a", //start macro module table
+									{
+										"title":"Open file in a new browser tab: \n" +
+										fileStr,
+										"onclick":"DesktopContent.openNewBrowserTab(" +
+										"\"Code Editor\",undefined /*subname undefined for LID lookup*/," + 
+										"\"?" +
+										"startFilePrimary=" +
+										fileStr + "\",undefined /*unique undefined for LID lookup*/);", //end onclick
+									},
+									"<label class='" + 
+									Debug._errBoxId + "-localCallOut' style='cursor:pointer'>" + 
+									fileStr /*innerHTML*/ +
+									"</label>",
+									true /*doCloseTag*/);
+
+							i = ff + ("</FILE>").length; //proceed after filename
+						} //end <FILE> callout handling
+
 						//look for icc, .cc, .cpp, .hh, and .h 
 						if((str[j-2] == '.' && str[j-1] == 'h') || 
-							(str[j-3] == '.' && (str[j-2] == 'h' || str[j-2] == 'c')) || 
+							(str[j-3] == '.' && (str[j-2] == 'h' || str[j-2] == 'c')) || 							
 							(str[j-4] == '.' && (str[j-3] == 'c' || str[j-2] == 'i') && (str[j-2] == 'p' || str[j-2] == 'c')))
 						{
 							//find beginning of blob (first non-file/c++ character)
@@ -375,14 +423,25 @@ if (Debug.mode) //IF DEBUG MODE IS ON!
 
 							++l; //increment to first character of blob
 
-
-							//previous chunk								
-							returnStr += str.substr(i,l-i);
-
 							fileStr = str.substr(l,k-l);
 
-							//add label
-							returnStr += "<br>";
+							//attempt to extract label
+							labelStr = undefined;
+							if((f = str.lastIndexOf('|',l)) >= i) //must be >= for previous misfires on | find	
+							{						
+								labelStr = str.substr(f,l-f);	
+								l = f;
+							}
+
+							//previous chunk			
+							returnStr += str.substr(i,l-i);
+
+							if(returnStr[returnStr.length-1] != '\n')
+								returnStr += "<br>"; //make sure there is new line before label
+
+							//add start label
+							if(labelStr)
+								returnStr += "<br><b>" + labelStr + "</b>";
 
 							returnStr += //if filename, add link to CodeEditor
 								DesktopContent.htmlOpen("a", //start macro module table
@@ -393,7 +452,7 @@ if (Debug.mode) //IF DEBUG MODE IS ON!
 										"\"Code Editor\",undefined /*subname undefined for LID lookup*/," + 
 										"\"?" +
 										"startFilePrimary=" +
-										fileStr + "\",undefined /*unique undefined for LID lookup*/);' ", //end onclick
+										fileStr + "\",undefined /*unique undefined for LID lookup*/);", //end onclick
 									},
 									"<label class='" + 
 									Debug._errBoxId + "-localCallOut' style='cursor:pointer'>" + 
@@ -410,21 +469,57 @@ if (Debug.mode) //IF DEBUG MODE IS ON!
 									(str[k+1] == '\n' || str[k+1] == '\t')) ++k;								
 
 						}
-						else //not a call out so grab previous chunk
+						else //not a callout so grab previous chunk
 							returnStr += str.substr(i,k+1-i);
 
 						i = k+1;						
 					}
+
+					//look for file callouts one last time, for last chunk
+					var f;
+					var ff;
+					while(	(f  = str.indexOf("<FILE>" ,i)   ) > 0 && 
+							(ff = str.indexOf("</FILE>",f + 10) ) > 0) //found a FILE callout
+					{						
+						Debug.log("Found file call out at",f);//str.substr(f,ff-f));
+						
+						if(!returnStr) //check if need to define for the first time
+							returnStr = "";
+
+						//previous chunk								
+						returnStr += str.substr(i,f-i);
+
+						fileStr = str.substr(f + ("<FILE>").length,
+							ff - f - ("<FILE>").length);
+
+						returnStr += //if filename, add link to CodeEditor
+							DesktopContent.htmlOpen("a", //start macro module table
+								{
+									"title":"Open file in a new browser tab: \n" +
+									fileStr,
+									"onclick":"DesktopContent.openNewBrowserTab(" +
+									"\"Code Editor\",undefined /*subname undefined for LID lookup*/," + 
+									"\"?" +
+									"startFilePrimary=" +
+									fileStr + "\",undefined /*unique undefined for LID lookup*/);", //end onclick
+								},
+								"<label class='" + 
+								Debug._errBoxId + "-localCallOut' style='cursor:pointer'>" + 
+								fileStr /*innerHTML*/ +
+								"</label>",
+								true /*doCloseTag*/);
+
+						i = ff + ("</FILE>").length; //proceed after filename
+					} //end <FILE> callout handling
+
 				}
 				catch(e)
 				{
 					return undefined; //give up on errors
 				}
 
-
 				if(returnStr) //finish last chunk
 					returnStr += str.substr(i);	
-
 
 				return returnStr; //if untouched, undefined return
 			}
@@ -462,6 +557,7 @@ Debug._errBoxOffW = 0;
 Debug._errBoxOffH = 0;
 
 
+Debug._AVOID_TITLE_NEW_LINE_LENGTH = ("title='Open file in a new browser tab: \n").length;
 Debug._ERR_TRUNCATION_LENGTH = 10000;
 
 //=====================================================================================
@@ -479,10 +575,14 @@ Debug.errorPopConditionString = function(str, truncLenIn) {
 		else
 			truncLen = truncLenIn;
 	}
-	
-	
+		
 	for(var i=0;i<str.length && i<truncLen; ++i)
-		if(str[i] == '\n')
+		if(str[i] == '\n' && //avoid converting lines like these "title='Open file in a new browser tab: \n"
+			(i < Debug._AVOID_TITLE_NEW_LINE_LENGTH  || //spot check the title line
+				!(str[i + 6 - Debug._AVOID_TITLE_NEW_LINE_LENGTH] == '=' && 
+					str[i - 1] == ' ' && 
+					str[i - 2] == ':' && 
+					str[i - 3] == 'b')))
 			rstr += "<br>";
 		else if(str[i] == '\t')
 			rstr += "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
