Checkpoint of progress made at Tracker and Calorimeter VST with new DTC versions. Minor printout improvements; minor GUI window resizing fixes for FE Macros (and hiding Loading box).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,10 +133,16 @@ message("otsdaq_utilities WebGUI Debug Mode = ${OTS_DEBUG_MODE}")
 #FILE(REMOVE [ ${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js ])
 #FILE(REMOVE [ ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js ])
 # configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js @ONLY)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js @ONLY)
-FILE(COPY WebGUI DESTINATION . PATTERN "*.in" EXCLUDE)
-INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS PATTERN "*.in" EXCLUDE)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
+if( $ENV{OTS_DEBUG_MODE} MATCHES "2" )
+	message("otsdaq_utilities WebGUI skipping Debug.js handling in shared srcs/")
+else()
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js @ONLY)
+endif()
+
+	FILE(COPY WebGUI DESTINATION . PATTERN "*.in" EXCLUDE)
+	INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS PATTERN "*.in" EXCLUDE)
+	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
+
 
 message("otsdaq_utilities WebGUI created Debug.js at ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js}")
 message("otsdaq_utilities WebGUI created Debug.js at ${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js}")
